--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ table.fraction {
 	vertical-align: middle;
 	font-family: 'Crimson Text', serif;
 	font-size: 16px;
+	margin-top: 26px;
 }
 table.fraction td {
 	padding: 0 1px;
@@ -17,4 +18,10 @@ table.fraction td.function {
 	margin-bottom: 0;
 	margin-top: 20px;
 	border-bottom: 0;
+}
+.margin-bottom {
+	margin-bottom: 5px;
+}
+h5 {
+	margin-top: -1px;
 }
